2004-02-10  Geoffrey Hutchison  <ghutchis@wso.williams.edu>

	* configure, configure.in: Update with notes on versioning for
	shared library support.

	* src/Makefile.ac, src/Makefile.in: Apply specific 0:0:0 current
	version for shared libopenbabel -- change this as appropriate for
	new versions. See libtool manual for more information on what
	versions are needed for revisions, backwards incompatibility, etc.
	
2004-02-18  Michael Banck  <mbanck@gmx.net>

	* src/pqs.cpp: Include <strings.h>, if available.

2004-02-17  Michael Banck  <mbanck@gmx.net>

	* configure.in (AC_INIT): Changed PACKAGE_NAME to 'OpenBabel'.
	Additionally specifiy PACKAGE_TARNAME as 'openbabel'.
	(AM_INIT_AUTOMAKE): Removed deprecated arguments PACKAGE and
	VERSION.
	(AC_DEFINE_DIR): Use AC_PACKAGE_TARNAME instead of
	AC_PACKAGE_NAME.
	* configure: Regenerated.

2004-02-10  Geoffrey Hutchison  <ghutchis@wso.williams.edu>

	* src/mol.cpp: Documentation updates.

	* NEWS, THANKS: Updates for 1.100.2 release.

	* aromatic.txt, aromatic.txt: Minor updates for aromaticity of
	various heteroatoms.

	* element.txt: * Minor documentation update.

2004-02-14  Michael Banck  <mbanck@gmx.net>

	* src/base.cpp [HAVE_CONFIG_H]: Removed the conditional around
	#include babelconfig.h (reverted patch).
	* src/bgf.cpp, src/data.cpp, src/gromos96.cpp, src/main.cpp,
	src/newmain.cpp, src/oberror.cpp, src/obutil.cpp, src/patty.cpp,
	src/pdb.cpp, src/phmodel.cpp, src/povray.cpp, src/residue.cpp,
	src/rotor.cpp, src/typer.cpp, src/base.h, src/bitvec.h, src/crk.h,
	src/data.h, src/fileformat.h, src/grid.h, src/mol.h,
	src/obifstream.h, src/obutil.h: Likewise.
	
2004-02-13  Michael Banck  <mbanck@gmx.net>

	* configure.in (AM_INIT_AUTOMAKE): Added 'no-define', to prevent
	defines for PACKAGE and VERSION in src/babelconfig.h.in, which
	would confuse other projects.
	* configure: Regenerated.
	* src/babelconfig.h.in: Regenerated.

2004-02-10  Geoffrey Hutchison  <ghutchis@wso.williams.edu>
