@@ -1,3 +1,8 @@
+2004-03-13  Michael Banck  <mbanck@gmx.net>
+
+	* test/unitcell.cpp (TestUnitCell): Use %lf instead of %f to read
+	in the values from unitcell.txt.
+
 2004-02-10  Geoffrey Hutchison  <ghutchis@wso.williams.edu>
 
 	* configure, configure.in: Update with notes on versioning for
